--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         }
     ],
     "require": {
-        "php": "^7.4|^8.0|^8.1|^8.2",
+        "php": "^7.4|^8.0|^8.1|^8.2|^8.3",
         "psr/event-dispatcher": "^1.0.0",
         "psr/http-message": "^2.0"
     },
